# bunqhack7

./: .gitignore  IDEA.md  README.md  package-lock.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  session_manager.py  state.py
backend/app/integrations/: claude_client.py  gemini_client.py  hume_client.py  mocks.py
backend/app/routes/: admin.py  mock_control.py  transactions.py  verify.py
backend/app/services/: embedding_cache.py  merchant_check.py  mock_bunq.py  orchestrator.py  risk_embeddings.py  risk_scorer.py
backend/scripts/: dev.sh  seed.py  smoke.py  smoke_phase2.py  smoke_phase3.py
frontend/src/: App.tsx  types.ts
frontend/src/components/: VerifyingScreen.tsx
frontend/src/hooks/: useAudioCapture.ts  useVerification.ts
